# tg_fetcher

./: .coveragerc  .dockerignore  .env.example  .env.example.production  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_SUMMARY.md  README.md  docker-compose.observability.yml  docker-compose.yml  fetch_command.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_infrastructure.py
.github/: copilot-instructions.md
.github/instructions/: always.instructions.md
docs/: CODE_QUALITY_REPORT.md  CODE_QUALITY_TOOLS.md  CONFIGURATION.md  Fetcher_Quick_Reference.md  ISSUES_LOG.md  LOGGING_IMPROVEMENTS_2025-11-09.md  OBSERVABILITY.md  PHASE4_DAEMON_MODE.md  PRE_IMPLEMENTATION_CHECKLIST.md  PRODUCTION_READINESS.md  RELEASE_NOTES_v0.2.0.md  TESTING_CHECKLIST.md
docs/architecture/: C1-System-Context.md  C2-Container.md  C3-Component.md  C4-Code.md  README.md  observability.md  overview.md  strategies.md
docs/examples/: .dockerignore  Dockerfile  README.md  README_MVP.md  common_observability.py  config.py  entrypoint.sh  fetch_yesterday.py  fetcher.py  fetcher_fix.md  fetcher_service.py  fetcher_utils.py  healthcheck.py  logging_config.py  loki_handler.py  new_fetch_yesterday.py  new_fetcher.py  pytest.ini  requirements-test.txt  requirements.txt  retry_utils.py  session_manager.py  shutdown_utils.py  unified_fetcher.py
docs/guides/: README.md  deployment.md  quick_reference.md  quickstart.md  refetch.md
docs/maintenance/: README.md  code_quality.md  testing.md
docs/tech_task/: README.md  TZ-CLI-interface.md  TZ-cli-listen.md  TZ-command-subscriber-di.md  TZ-di-and-gateways.md  TZ-fetcher-improvements.md  TZ-fetcher-modularization.md  TZ-fetcher-reliability-and-testing.md  TZ-fetcher-resilience.md  TZ-fetcher-slimming.md  TZ-fix-message-fetching.md  TZ-hexagonal-refactor.md  TZ-observability-hardening.md  TZ-platform-roadmap.md  (+14 more)
scripts/: authorize_session.py  dev.ps1  dev.sh  fetch_ru_python_date.ps1  listen_events.py  observability_down.ps1  observability_up.ps1  push_command.py  queue_fetch_tasks_november.py  quickstart.ps1  quickstart.sh  send_command.py  send_fetch_command.py  status.ps1  status.sh  test_fetch.py  test_fetch_today.py  type_coverage.ps1
src/: __main__.py  daemon.py  main.py
tests/: conftest.py  test_strategies.py
typecov/: linecount.txt
(+116 files in other folders)
